Fixed cropping issue

--- a/src/styles.css
+++ b/src/styles.css
@@ -12,7 +12,7 @@ body {
 }
 
 /* Navigation bar */
-.nav { /*TODO: Border looks weird when screen size is smaller */
+.nav {
     background-color: #333;
     color: white;
     display: flex;
@@ -28,7 +28,7 @@ body {
     height: 100%;
     display: flex;
     align-items: center;
-    padding: .25rem;
+    /* padding: .25rem; */
 }
 
 .nav ul {
